tests/ui/methods/opaque_param_in_ufc.stderr
error[E0599]: no function or associated item named `method` found for struct `Foo<Bar>` in the current scope
  --> $DIR/opaque_param_in_ufc.rs:17:15
   |
LL | struct Foo<T>(T);
   | ------------- function or associated item `method` not found for this struct
...
LL |         Self::method();
   |               ^^^^^^ function or associated item not found in `Foo<Bar>`
   |
   = note: the function or associated item was found for
           - `Foo<u32>`

error[E0599]: no function or associated item named `method` found for struct `Foo<Bar>` in the current scope
  --> $DIR/opaque_param_in_ufc.rs:19:21
   |
LL | struct Foo<T>(T);
   | ------------- function or associated item `method` not found for this struct
...
LL |         Foo::<Bar>::method();
   |                     ^^^^^^ function or associated item not found in `Foo<Bar>`
   |
   = note: the function or associated item was found for
           - `Foo<u32>`

error[E0599]: no function or associated item named `method2` found for struct `Foo<Bar>` in the current scope
  --> $DIR/opaque_param_in_ufc.rs:24:15
   |
LL | struct Foo<T>(T);
   | ------------- function or associated item `method2` not found for this struct
...
LL |         Self::method2(x);
   |               ^^^^^^^ function or associated item not found in `Foo<Bar>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0599`.
